--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.2.1",
+    "formik": "^1.4.2",
+    "jquery": "^3.3.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-bootstrap": "^1.0.0-beta.3",
+    "react-datepicker": "^2.0.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.2",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "yup": "^0.26.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,7 +22,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8000/",
   "eslintConfig": {
     "extends": "react-app"
   },
