--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.2",
     "redux": "^4.0.1",
     "yup": "^0.26.7"
@@ -30,5 +32,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:8000"
 }
