--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.2",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "yup": "^0.26.7"
   },
   "scripts": {
@@ -30,5 +31,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://192.168.1.60:8000"
 }
