--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://79.134.84.131:80",
+  "proxy": "http://localhost:8000",
   "devDependencies": {
     "redux-logger": "^3.0.6"
   }
